Resolves #391 Admin: allow searching/filtering for specification attributes

--- a/src/Presentation/SmartStore.Web/Administration/Views/SpecificationAttribute/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/SpecificationAttribute/List.cshtml
@@ -1,9 +1,9 @@
-﻿@model Telerik.Web.Mvc.GridModel<SpecificationAttributeModel>
+﻿@*@model Telerik.Web.Mvc.GridModel<SpecificationAttributeModel>*@
 @using Telerik.Web.Mvc.UI
 @{    
-    //page title
     ViewBag.Title = T("Admin.Catalog.Attributes.SpecificationAttributes").Text;
 }
+
 <div class="section-header">
     <div class="title">
         @T("Admin.Catalog.Attributes.SpecificationAttributes")
@@ -12,29 +12,26 @@
         <a href="@Url.Action("Create")" class="btn btn-primary"><i class="icon-plus"></i>&nbsp;@T("Admin.Common.AddNew")</a>
     </div>
 </div>
+
 <table class="adminContent">
     <tr>
         <td>
-            @(Html.Telerik().Grid<SpecificationAttributeModel>(Model.Data)
-                    .Name("specificationattributes-grid")
-                    .Columns(columns =>
-                    {
-                        columns.Bound(x => x.Name)
-                            .Width(300)
-                            .Template(x => Html.ActionLink(x.Name, "Edit", new { id = x.Id }))
-                            .ClientTemplate("<a href='Edit/<#= Id #>'><#= Name #></a>");
-                        columns.Bound(x => x.DisplayOrder)
-                            .Width(100)
-                            .Centered();
-                        columns.Bound(x => x.Id)
-                            .Width(50)
-                            .Centered()
-                            .Template(x => Html.ActionLink(T("Admin.Common.Edit").Text, "Edit", new { id = x.Id }))
-                            .ClientTemplate("<a href=\"Edit/<#= Id #>\">" + T("Admin.Common.Edit").Text + "</a>")
-                            .Title(T("Admin.Common.Edit").Text);
-                    })
-                            .DataBinding(dataBinding => dataBinding.Ajax().Select("List", "SpecificationAttribute"))
-                            .EnableCustomBinding(true))
+            @(Html.Telerik().Grid<SpecificationAttributeModel>()
+				.Name("specificationattributes-grid")
+				.Columns(columns =>
+				{
+				columns.Bound(x => x.Name)
+					.Template(x => Html.ActionLink(x.Name, "Edit", new { id = x.Id }))
+					.ClientTemplate("<a href='Edit/<#= Id #>'><#= Name #></a>");
+				columns.Bound(x => x.DisplayOrder)
+					.Width(200)
+					.Filterable(false)
+					.Centered();
+				})
+				.Filterable()
+				.Pageable(settings => settings.PageSize((int)ViewData["GridPageSize"]).Position(GridPagerPosition.Both))
+				.DataBinding(dataBinding => dataBinding.Ajax().Select("List", "SpecificationAttribute"))
+				.EnableCustomBinding(true))
         </td>
     </tr>
 </table>
