Fixed exception when sending status change of a return request to a guest user. Also resolves #463

--- a/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/_CreateOrUpdate.cshtml
@@ -32,6 +32,14 @@
     </tr>
     <tr>
         <td class="adminTitle">
+            @Html.SmartLabelFor(model => model.StoreName)
+        </td>
+        <td class="adminData">
+            @Html.DisplayFor(model => model.StoreName)
+        </td>
+    </tr>
+    <tr>
+        <td class="adminTitle">
             @Html.SmartLabelFor(model => model.ProductName)
         </td>
         <td class="adminData">
