--- a/src/Presentation/SmartStore.Web/Administration/Views/SpecificationAttribute/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/SpecificationAttribute/List.cshtml
@@ -1,5 +1,4 @@
-﻿@*@model Telerik.Web.Mvc.GridModel<SpecificationAttributeModel>*@
-@using Telerik.Web.Mvc.UI
+﻿@using Telerik.Web.Mvc.UI
 @{    
     ViewBag.Title = T("Admin.Catalog.Attributes.SpecificationAttributes").Text;
 }
