--- a/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ReturnRequest/List.cshtml
@@ -1,12 +1,9 @@
-﻿@model Telerik.Web.Mvc.GridModel<ReturnRequestModel>
+﻿@model ReturnRequestListModel
 @using Telerik.Web.Mvc.UI
-
-@{
-    var gridPageSize = EngineContext.Current.Resolve<SmartStore.Core.Domain.Common.AdminAreaSettings>().GridPageSize;
-    
-    //page title
+@{  
     ViewBag.Title = T("Admin.ReturnRequests").Text;
 }
+
 <div class="section-header">
     <div class="title">
         <i class="icon icon-truck"></i>
@@ -15,13 +12,53 @@
     <div class="options">
     </div>
 </div>
+
+<table style="width: 100%;">
+    <tr>
+        <td class="adminTitle">
+            @Html.SmartLabelFor(model => model.SearchId)
+        </td>
+        <td class="adminData">
+            @Html.EditorFor(model => Model.SearchId)
+        </td>
+    </tr>
+    <tr>
+        <td class="adminTitle">
+            @Html.SmartLabelFor(model => model.SearchStoreId)
+        </td>
+        <td class="adminData">
+            @Html.DropDownListFor(model => model.SearchStoreId, Model.AvailableStores)
+        </td>
+    </tr>
+    <tr>
+        <td class="adminTitle">
+            @Html.SmartLabelFor(model => model.SearchReturnRequestStatusId)
+        </td>
+        <td class="adminData">
+            @Html.DropDownListFor(model => model.SearchReturnRequestStatusId, Model.AvailableReturnRequestStatus)
+        </td>
+    </tr>
+    <tr>
+		<td class="adminTitle">
+			&nbsp;
+		</td>
+        <td class="adminData">
+            <button type="submit" id="btnSearch" class="btn"><i class="icon-search"></i>&nbsp;@T("Admin.Common.Search")</button>
+        </td>
+    </tr>
+</table>
+<p></p>
+
 <table class="adminContent">
     <tr>
         <td>
-            @(Html.Telerik().Grid<ReturnRequestModel>(Model.Data)
+            @(Html.Telerik().Grid<ReturnRequestModel>()
                     .Name("returnrequests-grid")
                     .Columns(columns =>
                     {
+						columns.Bound(x => x.Id)
+							.Centered()
+							.Width(80);
 						columns.Bound(x => x.ProductName)
 							.Template(x => @Html.LabeledProductName(x.ProductId, x.ProductName, x.ProductTypeName, x.ProductTypeLabelHint))
 							.ClientTemplate(@Html.LabeledProductName("ProductId", "ProductName"));
@@ -36,12 +73,11 @@
                             .Centered()
                             .Template(x => Html.ActionLink(T("Admin.Common.View").Text, "Edit", "Order", new { id = x.OrderId }, new { }))
 							.ClientTemplate("<a href=\"" + @Url.Content("~/Admin/Order/Edit/") + "<#= OrderId #>\"><#= OrderId #></a>");
+						columns.Bound(x => x.ReturnRequestStatusStr)
+							.Width(180);						
                         columns.Bound(x => x.CreatedOn)
-							.Width(180)
-                            .Centered();
-                        columns.Bound(x => x.ReturnRequestStatusStr)
-							.Width(180)
-                            .Centered();
+							.Width(180);
+						columns.Bound(x => x.StoreName);
                         columns.Bound(x => x.Id)
 							.Width(100)
                             .Centered()
@@ -49,9 +85,31 @@
                             .ClientTemplate("<a href=\"Edit/<#= Id #>\">" + T("Admin.Common.Edit").Text + "</a>")
                             .Title(T("Admin.Common.Edit").Text);
                     })
-                    .Pageable(settings => settings.Total(Model.Total).PageSize(gridPageSize).Position(GridPagerPosition.Both))
+					.Pageable(settings => settings.PageSize(Model.GridPageSize).Position(GridPagerPosition.Both))
                     .DataBinding(dataBinding => dataBinding.Ajax().Select("List", "ReturnRequest"))
+					.ClientEvents(events => events.OnDataBinding("returnRequestGrid_onDataBinding"))
                     .EnableCustomBinding(true))
         </td>
     </tr>
 </table>
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        // search button
+        $('#btnSearch').click(function () {
+        	var grid = $('#returnrequests-grid').data('tGrid');
+            grid.currentPage = 1;
+            grid.ajaxRequest();
+            return false;
+        });
+    });
+
+    function returnRequestGrid_onDataBinding(e) {
+        var searchModel = {
+        	SearchId: $('#@Html.FieldIdFor(model => model.SearchId)').val(),
+        	SearchStoreId: $('#@Html.FieldIdFor(model => model.SearchStoreId)').val(),
+        	SearchReturnRequestStatusId: $('#@Html.FieldIdFor(model => model.SearchReturnRequestStatusId)').val()
+        };
+        e.data = searchModel;
+    }
+</script>
