--- a/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
@@ -26,7 +26,9 @@
             <div class="page-intro">
                 @Html.Raw(@T("Checkout.ConfirmHint"))
             </div>
-            
+
+            <input id="customercommenthidden" type="hidden" name="customercommenthidden" />
+
             if (Model.TermsOfServiceEnabled)
             {
             <div class="terms-of-service alert alert-info">
@@ -38,8 +40,6 @@
                         $("#disclaimer-trigger").click(function () {
                             $("#terms-of-service-modal .modal-body").html('<iframe id="iframe-terms-of-service" src="@Url.RouteUrl("TopicPopup", new { SystemName = "Disclaimer" })" width="800" scrolling="yes" frameBorder="0" />');
                         });
-
-
                     });
                 </script>
                 <label class="checkbox">
@@ -108,6 +108,9 @@
                     <script type="text/javascript">
                         $(function () {
                             $('.confirm-order-next-step-button').click(function () {
+
+                                $("#customercommenthidden").val($("#CustomerComment").val());
+
                                 //terms of services
                                 var termOfServiceOk = true;
                                 @if (Model.TermsOfServiceEnabled)
