Fixed install asset locations, reorganized Segoe UI fonts & fixed minor picture gallery bugs

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -5,12 +5,12 @@
 @font-face {
     font-family: "Segoe UI Light";
     font-weight: 100;
-    src: local("Segoe UI Light"), url("fonts/segoeui-semilight.eot") format('embedded-opentype'), url("fonts/segoeui-semilight.woff") format('woff'), url("fonts/segoeui-semilight.ttf") format('truetype');
+    src: local("Segoe UI Light"), url("../../Content/fonts/segoeui-semilight.eot") format('embedded-opentype'), url("../../Content/fonts/segoeui-semilight.woff") format('woff'), url("../../Content/fonts/segoeui-semilight.ttf") format('truetype');
 }
 @font-face {
     font-family: "Segoe UI Semibold";
     font-weight: 100;
-    src: local("Segoe UI Semibold"), url("fonts/segoeui-semibold.eot") format('embedded-opentype'), url("fonts/segoeui-semibold.woff") format('woff'), url("fonts/segoeui-semibold.ttf") format('truetype');
+    src: local("Segoe UI Semibold"), url("../../Content/fonts/segoeui-semibold.eot") format('embedded-opentype'), url("../../Content/fonts/segoeui-semibold.woff") format('woff'), url("../../Content/fonts/segoeui-semibold.ttf") format('truetype');
 }
 
 /* General
