--- a/src/Presentation/SmartStore.Web/Content/install/install.less
+++ b/src/Presentation/SmartStore.Web/Content/install/install.less
@@ -8,6 +8,20 @@
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
 
+/* Fonts (Chrome DirectWrite & FF fix)
+-------------------------------------------------------------- */
+
+@font-face {
+    font-family: "Segoe UI Light";
+    font-weight: 100;
+    src: local("Segoe UI Light"), url("../fonts/segoeui-semilight.eot") format('embedded-opentype'), url("../fonts/segoeui-semilight.woff") format('woff'), url("../fonts/segoeui-semilight.ttf") format('truetype');
+}
+@font-face {
+    font-family: "Segoe UI Semibold";
+    font-weight: 100;
+    src: local("Segoe UI Semibold"), url("../fonts/segoeui-semibold.eot") format('embedded-opentype'), url("../fonts/segoeui-semibold.woff") format('woff'), url("../fonts/segoeui-semibold.ttf") format('truetype');
+}
+
 // CSS Reset
 @import "~/Content/bootstrap/reset.less";
 
@@ -104,7 +118,6 @@ body {
 	padding: 30px;
     background-color: #fff;
     background-color: rgba(255,255,255, .5);
-    //text-shadow: 0 1px 0 rgba(255,255,255, .25);
     .box-shadow(~'0 0 15px rgba(0,0,0, .15), 0 10px 6px -10px rgba(0,0,0, .4)');
     .border-radius(4px);
 }
@@ -114,6 +127,8 @@ body {
 	color: #fff;
 	color: lighten(@installBaseColor, 40%);
 	text-shadow: 0 1px 0 darken(@installBaseColor, 12%);
+	font-family: @pageTitleFontFamily;
+	font-weight: @pageTitleFontWeight;
 }
 
 .install-content {
