--- a/src/Presentation/SmartStore.Web/Views/Install/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Install/Index.cshtml
@@ -322,8 +322,8 @@
     }
 
     @* scripts (foot) *@
-    <script src='~/Scripts/jquery-ui/jquery.ui.core.min.js' type='text/javascript'></script>
-    <script src='~/Scripts/jquery-ui/jquery.effects.core.min.js' type='text/javascript'></script>
+    <script src='~/Scripts/jquery-ui/core.js' type='text/javascript'></script>
+    <script src='~/Scripts/jquery-ui/effect.js' type='text/javascript'></script>
     <script src='~/Scripts/jquery.unobtrusive-ajax.min.js' type='text/javascript'></script>
     <script src='~/Scripts/jquery.validate.min.js' type='text/javascript'></script>
     <script src='~/Scripts/jquery.validate.unobtrusive.min.js' type='text/javascript'></script>
