Updated 51degrees mobi lookup and MaxMind GeoIP Lookup to latest versions

--- a/src/Presentation/SmartStore.Web/Administration/Views/Home/About.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Home/About.cshtml
@@ -262,6 +262,17 @@
 			</li>
 			<li>
 				<div class="name">
+					<a href="http://www.maxmind.com" rel="nofollow" target="AboutTargetWin">GeoLite Free by MaxMind</a>
+				</div>
+				<div class="copyright">
+					Copyright &copy; 2014 Maxmind
+				</div>
+				<div class="license">
+					<span>@(license):</span> <a href="http://creativecommons.org/licenses/by-sa/3.0/" rel="nofollow" target="AboutTargetWin">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>
+				</div>
+			</li>
+			<li>
+				<div class="name">
 					<a href="http://www.microsoft.com/" rel="nofollow" target="AboutTargetWin">Microsoft SQL Server Compact 4.0</a>
 				</div>
 				<div class="copyright">
