--- a/src/Presentation/SmartStore.Web/Administration/Views/Tax/ConfigureProvider.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Tax/ConfigureProvider.cshtml
@@ -1,4 +1,4 @@
-﻿@model TaxProviderModel
+﻿@*@model TaxProviderModel
 @{    
     //page title
     ViewBag.Title = T("Admin.Configuration.Tax.Providers.Configure").Text + " - " + Model.FriendlyName;
@@ -15,4 +15,4 @@
 else
 {
     @T("Admin.Common.ConfigurationNotRequired")
-}
+}*@
