--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/CustomerUser.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/CustomerUser.cshtml
@@ -186,6 +186,15 @@
         </tr>
         <tr>
             <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.CustomerSettings.CustomerNameFormatMaxLength)
+            </td>
+            <td class="adminData">
+                @Html.EditorFor(model => model.CustomerSettings.CustomerNameFormatMaxLength)
+                @Html.ValidationMessageFor(model => model.CustomerSettings.CustomerNameFormatMaxLength)
+            </td>
+        </tr>
+        <tr>
+            <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.CustomerSettings.DefaultPasswordFormat)
             </td>
             <td class="adminData">
