--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/ShoppingCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/ShoppingCart.cshtml
@@ -188,6 +188,15 @@
         </tr>
         <tr>
             <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.ShowWeight)
+            </td>
+            <td class="adminData">
+                @Html.SettingEditorFor(model => model.ShowWeight)
+                @Html.ValidationMessageFor(model => model.ShowWeight)
+            </td>
+        </tr>
+        <tr>
+            <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.ShowLinkedAttributeValueQuantity)
             </td>
             <td class="adminData">
