* Refactored shipping plugins to be providers * Implemented abstract ProviderList template

--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/ConfigureProvider.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/ConfigureProvider.cshtml
@@ -4,6 +4,7 @@
 }
 <div class="section-header">
     <div class="title">
+		<img src="@Url.Content(Model.IconUrl)" alt="@Model.FriendlyName" />
         @ViewBag.Title <a href="@ViewBag.ListUrl">(@T("Admin.Common.BackToList"))</a>
     </div>
 </div>
