--- a/src/Presentation/SmartStore.Web/Administration/Views/Shipping/Providers.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shipping/Providers.cshtml
@@ -1,5 +1,6 @@
-﻿@model Telerik.Web.Mvc.GridModel<ShippingRateComputationMethodModel>
-@using Telerik.Web.Mvc.UI
+﻿@model IEnumerable<ShippingRateComputationMethodModel>
+@*@using Telerik.Web.Mvc.UI*@
+
 @{    
     //page title
     ViewBag.Title = T("Admin.Configuration.Shipping.Providers").Text;
@@ -13,45 +14,12 @@
 <table class="adminContent">
     <tr>
         <td>
-            @(Html.Telerik().Grid<ShippingRateComputationMethodModel>()
-                    .Name("shippingproviders-grid")
-                    .DataKeys(x =>
-                    {
-                        x.Add(y => y.SystemName).RouteKey("systemName");
-                    })
-                    .BindTo(Model.Data)
-                    .Columns(columns =>
-                    {
-                        columns.Bound(x => x.FriendlyName)
-                            .Width(250)
-                            .ReadOnly();
-                        columns.Template(
-                                @<div>
-                                    @Html.ActionLink(T("Admin.Configuration.Shipping.Providers.Configure").Text, "ConfigureProvider", new { systemName = item.SystemName })
-                                </div>
-                            )
-                            .ClientTemplate("<a href=\"ConfigureProvider?systemName=<#= SystemName #>\">" + T("Admin.Configuration.Shipping.Providers.Configure").Text + "</a>")
-                            .Width(100)
-                            .Centered()
-                            .Title(T("Admin.Configuration.Shipping.Providers.Configure").Text);
-                        columns.Bound(x => x.SystemName).Width(250).ReadOnly();
-                        columns.Bound(x => x.DisplayOrder).Width(100);
-                        columns.Bound(x => x.IsActive)
-                            .Width(100)
-                             .Template(item => @Html.SymbolForBool(item.IsActive))
-                            .ClientTemplate(@Html.SymbolForBool("IsActive"))
-                            .Centered();
-                        columns.Command(commands =>
-                        {
-                            commands.Edit().Localize(T);
-                        }).Title(T("Admin.Common.Edit").Text).Width(100);
-                    })
-                    .DataBinding(dataBinding =>
-                    {
-                        dataBinding.Ajax().Select("Providers", "Shipping")
-                            .Update("ProviderUpdate", "Shipping");
-                    })
-                    .EnableCustomBinding(true))
+			@Html.ProviderList(Model, 
+				@<div>
+					<a class='btn plugin-uninstall@(item.IsActive ? "" : " btn-success")' href='@Url.Action("ActivateProvider", new { systemName = item.SystemName, activate = !item.IsActive })'>
+						@T("Admin.Common.{0}".FormatInvariant(item.IsActive ? "Deactivate" : "Activate"))
+					</a>
+				</div>)
         </td>
     </tr>
 </table>
