--- a/src/Presentation/SmartStore.Web/Administration/Views/Tax/Providers.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Tax/Providers.cshtml
@@ -1,5 +1,4 @@
-﻿@model Telerik.Web.Mvc.GridModel<TaxProviderModel>
-@using Telerik.Web.Mvc.UI
+﻿@model IEnumerable<TaxProviderModel>
 @{    
     //page title
     ViewBag.Title = T("Admin.Configuration.Tax.Providers").Text;
@@ -12,40 +11,14 @@
 <table class="adminContent">
     <tr>
         <td>
-            @(Html.Telerik().Grid<TaxProviderModel>()
-                    .Name("taxProviders-grid")
-                    .DataKeys(x =>
-                    {
-                        x.Add(y => y.SystemName).RouteKey("systemName");
-                    })
-                    .BindTo(Model.Data)
-                    .Columns(columns =>
-                    {
-                        columns.Bound(x => x.FriendlyName).Width(250);
-                        columns.Bound(x => x.IsPrimaryTaxProvider)
-							.Template(					    
-								@<a href='@Url.Action("Providers", new { systemName = item.SystemName })' class="btn" @Html.Attr("disabled", "disabled", item.IsPrimaryTaxProvider) title='@T("Admin.Configuration.Tax.Providers.Fields.MarkAsPrimaryProvider").Text'>
-									@if (item.IsPrimaryTaxProvider)
-									{
-										<i class="fa fa-check"></i>
-									}
-									@T("Admin.Telerik.GridLocalization.Select")
-								</a>
-							)
-                            .Centered()
-                            .Width(100)
-							.ReadOnly();
-						columns
-							.Template(
-                                @<div @Html.Attr("class", "hide", !item.IsConfigurable)>
-                                    @Html.ActionLink(T("Admin.Common.Configure").Text, "ConfigureProvider", "Plugin", new { systemName = item.SystemName }, null)
-                                </div>
-                            )
-							.Title(T("Admin.Common.Configure").Text)                    
-							.Width(100)
-                            .Centered();
-                        columns.Bound(x => x.SystemName).Width(250);
-                    }))
+			@Html.ProviderList(Model, 
+				@<a href='@Url.Action("Providers", new { systemName = item.SystemName })' class="btn" @Html.Attr("disabled", "disabled", item.IsPrimaryTaxProvider)>
+					@if (item.IsPrimaryTaxProvider)
+					{
+						<i class="fa fa-check"></i>
+					}
+					@T("Admin.Configuration.Tax.Providers.Fields.MarkAsPrimaryProvider")
+				</a>)
         </td>
     </tr>
 </table>
