--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -72,11 +72,9 @@ a:hover {
 	background: @btnDangerBackground;
 }
 
-.dropdown-menu,
-.btn {
-	.fa {
-		font-size: 14px;
-	}
+.dropdown-menu .fa,
+.btn > .fa {
+	font-size: 14px;
 }
 
 .dropdown-menu {
@@ -134,6 +132,21 @@ a:hover {
 }
 
 
+/* Header
+-------------------------------------------------------------- */
+
+header {
+	background-color: @navbarInverseBackground;
+	height: 70px;
+	padding-bottom: 50px;
+}
+
+.popup header {
+	display: none;
+}
+
+
+
 /* Navbar overrides
 -------------------------------------------------------------- */
 .navbar .nav {
@@ -144,27 +157,26 @@ a:hover {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	border-bottom: 1px solid #fff;
-	.box-shadow(0 8px 8px -8px #000 inset);
+	background: @navbarInverseBackground;
+	//background-image: none;
+	.box-shadow(none);
 	.border-radius(0);
 }
 
 .navbar.navbar-inverse .navbar-inner .brand {
 	margin: 0;
-	padding: 10px 15px 0 30px;
+	padding-left: 30px;
 }
 
 #navbar-tools {
 	
 	.active-tool() {
-		background: #444;
-		color: #fff;
-		.box-shadow(~'0px 1px 6px rgba(0,0,0, 0.3) inset, 0px 1px 0px rgba(255,255,255, .12)');	
+		.box-shadow(~'inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05)');	
 	}
 	
 	position: absolute;
 	right: 30px;
-	top: 12px;
+	top: 10px;
 	margin: 0;
 	
 	.btn,
@@ -172,55 +184,42 @@ a:hover {
 		margin-top: 0;
 	}
 	
-	.dropdown-menu {
-		.border-radius(5px);
+	.toppad {
+		margin-top: 8px;
 	}
-	
-	// Buttons: actions, language, help
-	.navbar-tools-group .btn-group  {
-		& + .btn-group {
-			margin-left: 0; // override bs default;
-		}
 
-		&.pull-right {
-			float: none; // override bs default
-		}
-		
-		.btn {
-			.border-radius(0);
-		}
-		
-		&:first-child .btn {
-			.border-radius(4px 0 0 4px);
-		}
-		
-		&:last-child .btn {
-			.border-radius(0 4px 4px 0);
-		}	
-	}
-	
 	.navbar-tool {
-		color: rgba(255,255,255, .8);
-		border: 1px solid rgba(0,0,0, .7);
-		background: rgba(255,255,255, .09);
-		.box-shadow(~'1px 1px 0 rgba(255,255,255, .12) inset, -1px -1px 0 rgba(255,255,255, .09) inset');
-		padding: 4px 8px;
-		margin-left: -1px;
+		color: rgba(255,255,255, .87);
+		border: none;
+		background: transparent;
+		.box-shadow(none);
+		padding: 8px 6px;
+		.transition(color 0.1s linear);
 		
 		&:hover {
-			background-color: rgba(255,255,255, .15);
 			color: #fff;
 		}
 		
 		&:active {
 			.active-tool();
 		}
+
+		> .fa {
+			font-size: 20px;
+		}
+
+		span {
+			display: inline-block;
+			//padding-bottom: 10px;
+			margin-left: 3px;
+			vertical-align: top;
+		}
 	
 	}
-	
-	.btn-group.open .btn.dropdown-toggle {
-		.active-tool();
-	}
+}
+
+#current-user {
+	margin-left: 20px;
 }
 
 #current-user span {
@@ -235,7 +234,7 @@ a:hover {
 -------------------------------------------------------------- */
 
 #navbar .dropdown-menu {
-	margin-top: 0;
+	margin-top: -2px;
 	font-family: @baseFontFamily;
 }
 
@@ -256,25 +255,25 @@ a:hover {
 	border-left-color: #ccc;
 }
 
+#navbar .nav > li {
+	background: rgba(255,255,255, 0);
+	.opacity(90);
+	.transition(opacity 0.1s linear);
+}
+
+#navbar .nav > li:hover {
+	background: rgba(255,255,255, .15);
+	.opacity(100);
+}
+
 #navbar .nav > li > a {
 	max-height: @navbarHeight - 12;
 	min-width: 40px;
 	max-width: 80px;
 	height: auto;
-	padding: 6px !important;
+	padding: 12px 6px !important;
 	text-align: center;
-	background: rgba(255,255,255, 0);
-
-	.opacity(82);
-	.transition(opacity 0.1s linear);
-	&:hover 	{ .opacity(100); background: rgba(255,255,255, .15) }
-
-	.sm-icon {
-		position: relative;
-		text-align: center;
-		width: 22px;
-		height: 22px;
-	}
+	background: transparent;
 
 	.fa {
 		position: relative;
@@ -308,8 +307,8 @@ a:hover {
     height: 14px;
     padding: 0;
     background: transparent url('images/ajax-progress-2.gif') 50% 50% no-repeat;
-    top: 36px;
-    left: 34px;
+    top: 52px;
+    left: 30px;
     visibility: hidden;
     .opacity(0);
     .transition(opacity 0.15s linear);
@@ -332,11 +331,11 @@ a:hover {
 #content {
     position: relative;
     height: auto;
-    margin: 74px 30px 0;
+    margin: 0 30px;
+	margin-top: -50px;
     background-color: #fff;
-    padding: 15px 15px 60px 15px;
-    .box-shadow(~'0 0 8px #bbb');
-	.border-radius(6px 6px 0 0);
+    padding: 15px 30px 60px 30px;
+    .box-shadow(~'0 0 6px rgba(0,0,0, 0.2)');
 }
 
 .popup #content {
@@ -487,9 +486,9 @@ body .t-content.t-state-active {
 
 
 body {
-    background-attachment: fixed;
-    //#gradient > .vertical-three-colors(#ececec, #ececec, 50%, #fff);
-	#gradient > .vertical-three-colors(@infoBackground, @infoBackground, 50%, #fff);
+    //background-attachment: fixed;
+	//#gradient > .vertical-three-colors(@infoBackground, @infoBackground, 50%, #fff);
+	background-color: #f5f5f5;
 }
 hr {
     border-bottom: 1px solid #CCC;
@@ -523,8 +522,9 @@ a:hover {
     left: 0;
     top: 0;
     right: 0;
-    /*background-color: #fff;*/
-    padding: 10px;
+    padding: 10px 30px;
+	.transition(background-color 0.1s linear);
+	
     
     .title {
 	    position: relative;
@@ -534,7 +534,8 @@ a:hover {
 	    font-weight: @pageTitleFontWeight;
 	    color: @pageTitleColor;
 	    font-size: 20px;
-	    line-height: 30px;
+	    line-height: 32px;
+		height: 32px;
 		/*vertical-align: bottom;*/
 	    vertical-align: middle;
 	    .text-overflow();
@@ -547,10 +548,9 @@ a:hover {
 		}
 
 		img {
-		    max-height: 50px;
+		    max-height: 32px;
 			max-width: 120px;
-		    vertical-align: middle;
-		    padding-bottom: 2px;
+		    vertical-align: top;
 		}
 		
 		a {
@@ -563,30 +563,29 @@ a:hover {
     
 	.options {
 		position: absolute;
-	    right: 15px;
-	    top: 12px;
+	    right: 30px;
+	    top: 10px;
 	    &.btn-toolbar { margin: 0; }
 	}
     
     &.sticky {
 		position: fixed;
 		z-index: 10;
-		left: 0; //89px;
-		top: 54px; //0;
-		
-		@c: fade(#f6f6f6, 60%);
-		.gradientBar(lighten(@c, 8%), @c);
+		left: 30px;
+		right: 30px;
+		top: 0;
+		background: #f7f7f7;
 
 		text-shadow: none;
-		border-bottom: 1px solid #dadada;
+		border-bottom: 1px solid #ccc;
 
 		.title { 
 			text-shadow: none; 
-			left: 30px;
+			left: 5px;
 		}
 
 		.options {
-			right: 45px;
+			right: 30px;
 		}
     }
 }
@@ -613,8 +612,10 @@ a:hover {
 }
 
 .popup .section-header.sticky {
+	left: 0;
+	right: 0;
 	top: 0;
-	.options { right: 15px }
+	.options { right: 30px }
 }
 
 /* MULTI-STORE */
@@ -941,12 +942,13 @@ legend {
 
 
 .stats-today .widget-content {
-	#gradient > .vertical(#fafafa, #e9e9e9);
+	background: transparent;
+	border: none;
+	padding: 0;
 }
 
 .stats-today {
 	position: relative;
-	text-shadow: 0 -1px 0 #fff;
 }
 
 .stats-today-title,
@@ -960,18 +962,16 @@ legend {
 
 .stats-today-title {
 	position: absolute;
-	left: 15px;
-	bottom: 20px;
-	color: #aaa;
+	font-size: 50px;
+	font-family: @pageTitleFontFamily;
+	font-weight: @pageTitleFontWeight;
 }
 
 .stats-today-item {
 	float: right;
 	padding: 0 24px;
 	text-align: center;
-	border-right: 1px solid #d1d1d1;
-	border-left: 1px solid #fff;
-	&.alpha { border-left: none }
+	border-right: 1px solid #f2f2f2;
 	&.omega { padding-right: 0; border-right: none }
 }
 
@@ -979,7 +979,7 @@ legend {
 	font-weight: bold;
 	font-size: 12px;
 	margin-bottom: 8px;
-	color: #999;
+	color: #aaa;
 }
 
 .stats-today-item-value {
